<resources>
    <string name="app_name">Wasyal</string>
    <string name="verify">Verify</string>
    <string name="user_name">Username</string>
    <string name="phone_number">Mobile number</string>
    <string name="save_button">Save</string>
    <string name="city">City</string>
    <string name="sign_in">Sign In</string>
    <string name="verify_phone">Please type the verification code sent to</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wasyal</string>
    <string name="nav_header_subtitle">M.Elblasy14@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="any_place">Doesn\'t find place ?</string>
    <string name="move_any_thing">Move anything, anytime, anywhere</string>
    <string name="get_any_thing">Get anything, anytime, anywhere</string>
    <string name="submit">Next</string>
    <string name="order_again">Order again</string>
    <string name="see_news">Show drivers offers</string>

    <string name="category">Category</string>
    <string name="list_of_places">List of places</string>

    <!-- menu nav -->
    <string name="communicate">Communicate</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">My Orders</string>
    <string name="menu_history">History of orders</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_send">Work with us</string>

    <!-- List item of types -->
    <string name="restaurant">Restaurant</string>
    <string name="groceries">Groceries</string>
    <string name="florist">Florist</string>
    <string name="cafe">Cafe</string>
    <string name="bakery">Bakery</string>
    <string name="book">Books</string>
    <string name="clothe">Clothes</string>
    <string name="electric">Electric</string>


    <!-- order edit text -->
    <string name="order_detail">write what you want…</string>
    <string name="order_number">1</string>

    <!-- notification -->
    <string name="notification_title">New Order</string>

    <!-- settings activity -->
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>

    <string name="choose_language">Choose your language</string>

    <!-- location in order -->
    <string name="from">Receiving point</string>
    <string name="to">Delivery point</string>
    <string name="place_name">Place name</string>

    <!-- Toast -->
    <string name="valid_location">Please enter a valid location</string>
    <string name="valid_user_name">Please enter a valid Username</string>
    <string name="valid_phone_number">Please enter a valid Mobile number</string>
    <string name="valid_city">Please select your city</string>
    <string name="toost_to_restart">You should restart application</string>

    <string name="orders">Place an order</string>
    <string name="details_of_order">Details of order</string>

    <string name="save_changes">Save Change</string>

    <!-- alert dialog -->
    <string name="sure_to_save">Are you sure you want to save this changes ?</string>
    <string name="choose_driver">Choose Driver</string>
    <string name="sure_to_choose">Are you sure you want to choose this driver ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="about_us">We are Wasayl who can help you to deliver any thing any where any time we will be pleased in helping you</string>
    <string name="no_offers">There is no offers yet</string>


    <string name="rate">Rate Driver</string>
    <string name="speak_to_driver">Speak to Driver</string>
    <string name="on_his_way">On his way to take the order</string>
    <string name="order_status">Order Status</string>
    <string name="on_way_to_you">On his way to you</string>
    <string name="deliverd">Delivered</string>
    <string name="choose_kind">Choose your kind of\n order</string>
    <string name="move_heavy">Want to move heavy thing</string>
    <string name="move_light">Want to buy or move light thing</string>


    <string-array name="fading">
        <item>Move anything, anytime, anywhere</item>
        <item>Click Here!</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="Cities">
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Gizeh</item>
        <item>Ismailia</item>
        <item>Port Said</item>
        <item>Suez</item>
        <item>Sohag</item>
        <item>Luxor</item>
        <item>Al-Mansura</item>
        <item>El-Mahalla El-Kubra</item>
        <item>Tanta</item>
        <item>Asyut</item>
        <item>Fayyum</item>
        <item>Zagazig</item>
        <item>Aswan</item>
        <item>Damietta</item>
        <item>Damanhur</item>
        <item>al-Minya</item>
        <item>Beni Suef</item>
        <item>Qena</item>
        <item>Hurghada</item>
        <item>6th of October City</item>
        <item>Shibin El Kom</item>
        <item>Banha</item>
        <item>Kafr el-Sheikh</item>
        <item>Arish</item>
        <item>Mallawi</item>
        <item>10th of Ramadan City</item>
        <item>Bilbais</item>
        <item>Marsa Matruh</item>
    </string-array>

</resources>
